force-app/main/default/objects/Chat_Event_Entity__c/Chat_Event_Entity__c.object-meta.xml
<CustomObject>
    <label>Chat Event Entity</label>
    <nameField>
        <label>Chat Event Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Event Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>