force-app/main/default/objects/Chat_Event_Entity__c/fields/Chat_Event__c.field-meta.xml
<CustomField>
    <fullName>Chat_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Event</label>
    <referenceTo>Chat_Event__c</referenceTo>
    <relationshipLabel>Chat Event Entities</relationshipLabel>
    <relationshipName>Chat_Event_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>