force-app/main/default/objects/Chat_Event_Entity__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>